syntax = "proto3";

package envoy.extensions.network.dns_resolver.apple.v3;

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.network.dns_resolver.apple.v3";
option java_outer_classname = "AppleDnsResolverProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: apple DNS resolver]
// [#extension: envoy.dns_resolver.apple]

// For Envoy built in MacOS to use apple DNS library as DNS resolver, the following need to be done:
// 1) In file: :repo:`extensions_build_config.bzl <source/extensions/extensions_build_config.bzl>`,
// enable apple DNS resolver extension by adding below line
// "envoy.dns_resolver.apple":                "//source/extensions/network/dns_resolver/apple:config",
// 2) Either enable the run time flag: ``envoy.restart_features.use_apple_api_for_dns_lookups``, which
// is enabled by default. Or in corresponding Envoy configuration, add a typed configuration. For example, in
// :repo:'bootstrap.proto <api/envoy/config/bootstrap/v3/bootstrap.proto>`,
// add this message as a typed extension in field:
// :ref:'typed_dns_resolver_config <envoy_v3_api_field_config.bootstrap.v3.Bootstrap.typed_dns_resolver_config>'
message AppleDnsResolverConfig {
}
